--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-# backports.functools-lru-cache==1.6.1
-numpy==1.16.2
-# certifi==2019.11.28
-# CVXcanon==0.1.1
+#backports.functools-lru-cache==1.6.4
+#CVXcanon==0.1.0
 cvxpy==0.4.11
 cycler==0.10.0
 dill==0.3.1.1
 ecos==2.0.7.post1
 fastcache==1.1.0
+gurobipy==9.1.2
 h5py==2.9.0
 kiwisolver==1.1.0
 matplotlib==2.2.5
 multiprocess==0.70.9
+numpy==1.16.2
+pandas==0.24.2
+Pillow==6.2.2
+pybind11==2.6.2
 pyparsing==2.4.6
 python-dateutil==2.8.1
 pytz==2019.3
@@ -20,5 +23,3 @@ scs==2.1.1.post2
 six==1.14.0
 subprocess32==3.5.4
 toolz==0.10.0
-Pillow==6.2.2
-pandas==0.24.2
